tests/errors/intrinsics_1arg.f90
program intrinsics_1arg
    implicit none

    print *, abs(a = -4)
    print *, acos(x = 0.5)
    print *, asin(x = 0.5)
    print *, atan(x = 1.0)
    print *, cos(x = 0.0)
    print *, cosh(x = 1.0)
    print *, erf(x = 1.0)
    print *, erfc(x = 1.0)
    print *, exp(x = 2.0)
    print *, gamma(x = 5.0)
    print *, log(x = 2.0)
    print *, log10(x = 100.0)
    print *, sin(x = 1.57)
    print *, sinh(x = 1.0)
    print *, sqrt(x = 4.0)
    print *, tan(x = 0.5)
    print *, tanh(x = 0.5)
    print *, iabs(x = -10)
    print *, not(x = 0)
    print *, adjustl(x = "  hello")
    print *, adjustr(x = "hello  ")
    print *, len(x = "hello")
    print *, trim(x = "hello  ")
    print *, kind(x = 1.0)
    print *, precision(x = 1.0)
    print *, range(x = 1.0)
    print *, tiny(x = 1.0)
    print *, huge(x = 1.0)
    print *, epsilon(x = 1.0)
    print *, digits(x = 1.0)
    print *, radix(x = 1.0)
    print *, present(x = 1.0)
    print *, associated(x = 1.0)
    print *, allocated(x = 1.0)
    print *, shape(x = 1.0)
    print *, size(x = 1.0)
    print *, leadz(i = 16)
    print *, trailz(i = 16)

end program intrinsics_1arg